--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
   <meta name="description" content="Learn the foundations of coding with 100 questions assisted with AI.">
 
-  <meta property="og:url" content="https://program-ai.app/">
+  <meta property="og:url" content="https://embedded-rox.app/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Sunset | 100 Question Learning Experience">
   <meta property="og:title" content="Sunset | 100 Question Learning Experience">
   <meta property="og:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
-  <meta property="og:image" content="https://rfes.cloudinary.com/dtkeyccga/image/upload/v1723193585/8_sexlqw.png">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="program-ai.app">
-  <meta property="twitter:url" content="https://program-ai.app">
+  <meta property="twitter:domain" content="embedded-rox.app">
+  <meta property="twitter:url" content="https://embedded-rox.app">
   <meta name="twitter:title" content="Sunset | 100 Question Learning Experience">
   <meta name="twitter:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
-  <meta name="twitter:image" content="https://res.cloudinary.com/dtkeyccga/image/upload/v1723193585/8_sexlqw.png">
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
   <meta bata-rh="true" name="twitter:image:alt" content="Sunset Logo">
 
   <meta data-rh="true" name="twitter: image:width" content="1280">
