--- a/src/dot.html
+++ b/src/dot.html
@@ -17,7 +17,7 @@
     <li>You’ll learn underrepresented, evergreen, and super valuable skills for a modern market during a period of
         history
         where we can create abundance and opportunity.</li>
-    <li><a href="https://program-ai.app" style="color: #3498db; text-decoration: underline;" target="_blank">You’ll save
+    <li><a href="https://embedded-rox.app" style="color: #3498db; text-decoration: underline;" target="_blank">You’ll save
             time, money, and energy </a>so that you can afford to explore other prospects, like the ability to
         create
         businesses with your friends, family, or colleagues.</li>
@@ -93,7 +93,7 @@
         target="_blank" style="color: #3498db; text-decoration: underline;" target="_blank">This is
         something I write about passionately</a>.</p>
 <p>This is all a long way to say that I’m here to encourage your learning in the spaces that we share together. I’m
-    hoping you decide to give it another shot. <a href="https://program-ai.app" target="_blank"
+    hoping you decide to give it another shot. <a href="https://embedded-rox.app" target="_blank"
         style="color: #3498db; text-decoration: underline;">The technology has recently improved</a> and is a lot closer
     to what I want it to look and feel like. I want to invite you to give it a try. In 2024, I’m sure most of us are
     trying to de-mystify how powerful tools like AI can create opportunities for us and I believe the platform I’ve
@@ -102,7 +102,7 @@
     often grateful for the chance to write a message like this to you, and I’m eager to continue its success.</p>
 
 <p>Sheilf</p>
-<p>New app: <a href="https://program-ai.app" style="color: #3498db; text-decoration: underline;" target="_blank">Program
+<p>New app: <a href="https://embedded-rox.app" style="color: #3498db; text-decoration: underline;" target="_blank">Program
         AI App</a><br>
     New Instagram: <a href="https://instagram.com/sheilfer" style="color: #3498db; text-decoration: underline;"
         target="_blank">Connect
