--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
   <meta name="description" content="Learn the foundations of coding with 100 questions assisted with AI.">
 
-  <meta property="og:url" content="https://embedded-rox.app/">
+  <meta property="og:url" content="https://embedded-sunset.app/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Sunset | 100 Question Learning Experience">
   <meta property="og:title" content="Sunset | 100 Question Learning Experience">
@@ -16,8 +16,8 @@
     content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="embedded-rox.app">
-  <meta property="twitter:url" content="https://embedded-rox.app">
+  <meta property="twitter:domain" content="embedded-sunset.app">
+  <meta property="twitter:url" content="https://embedded-sunset.app">
   <meta name="twitter:title" content="Sunset | 100 Question Learning Experience">
   <meta name="twitter:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
   <meta name="twitter:image"
