--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
   <meta name="description" content="Learn the foundations of coding with 100 questions assisted with AI.">
 
-  <meta property="og:url" content="https://embedded-sunset.app/">
+  <meta property="og:url" content="https://robotsbuildingeducation.com/">
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Sunset | 100 Question Learning Experience">
-  <meta property="og:title" content="Sunset | 100 Question Learning Experience">
+  <meta property="og:site_name" content="Robots Building Education | 100 Question Learning Experience">
+  <meta property="og:title" content="Robots Building Education | 100 Question Learning Experience">
   <meta property="og:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
   <meta property="og:image"
     content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="embedded-sunset.app">
-  <meta property="twitter:url" content="https://embedded-sunset.app">
-  <meta name="twitter:title" content="Sunset | 100 Question Learning Experience">
+  <meta property="twitter:domain" content="robotsbuildingeducation.com">
+  <meta property="twitter:url" content="https://robotsbuildingeducation.com">
+  <meta name="twitter:title" content="Robots Building Education | 100 Question Learning Experience">
   <meta name="twitter:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
   <meta name="twitter:image"
     content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
-  <meta bata-rh="true" name="twitter:image:alt" content="Sunset Logo">
+  <meta bata-rh="true" name="twitter:image:alt" content="Robots Building Education Logo">
 
   <meta data-rh="true" name="twitter: image:width" content="1280">
   <meta data-rh="true" name="twitter: image:height" content="720">
@@ -37,7 +37,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-  <title>Sunset | 100 Question Learning Experience With Intelligent Assistance</title>
+  <title>Robots Building Education | 100 Question Learning Experience With Intelligent Assistance</title>
 </head>
 
 <body>
