--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
   <meta property="og:site_name" content="Robots Building Education | AI Coding Tutor">
   <meta property="og:title" content="Robots Building Education | AI Coding Tutor">
   <meta property="og:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
-  <meta property="og:image"
-    content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
+  <meta property="og:image" content="https://res.cloudinary.com/dtkeyccga/image/upload/v1743209424/FFFEF5_d4weow.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta property="twitter:domain" content="robotsbuildingeducation.com">
   <meta property="twitter:url" content="https://robotsbuildingeducation.com">
   <meta name="twitter:title" content="Robots Building Education | AI Coding Tutor">
   <meta name="twitter:description" content="Learn the foundations of coding with 100 questions assisted with AI.">
-  <meta name="twitter:image"
-    content="https://res.cloudinary.com/dtkeyccga/image/upload/v1728270558/zre4dehmebfdikzeasoh.png">
+  <meta name="twitter:image" content="https://res.cloudinary.com/dtkeyccga/image/upload/v1743209424/FFFEF5_d4weow.png">
   <meta bata-rh="true" name="twitter:image:alt" content="Robots Building Education Logo">
 
   <meta data-rh="true" name="twitter: image:width" content="1280">
