--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link rel="icon" type="image/svg+xml" href="./public/logo.png" />
   <meta name="description" content="Learn the foundations of coding with 100 questions assisted with AI.">
 
+  <meta name="base:app_id" content="69436ac9d77c069a945bdfd3" />
+  <meta name="fc:miniapp" content='{
+        "version": "next",
+        "imageUrl": "https://res.cloudinary.com/dtkeyccga/image/upload/v1743209424/FFFEF5_d4weow.png",
+        "button": {
+          "title": "Robots Building Education | AI Coding Tutor",
+          "action": {
+            "type": "launch_frame",
+            "url": "https://robotsbuildingeducation.com"
+          }
+        }
+      }' />
   <meta property="og:url" content="https://robotsbuildingeducation.com/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Robots Building Education | AI Coding Tutor">
